# system

./: .gitignore  README.md  backup.py  clean.py  init.sh  pyproject.toml  sync.py
database/: __init__.py  conf.py  get_date.py  logger.py  query.py  track.py
dataset/: __init__.py
dataset/akshare/: __mixin__.py  fund.csv  fund_portfolio_hold.py
dataset/futu/: init.py
dataset/jsl/: __mixin__.py  cbnew_detail_hist.py  qdii_list.py
dataset/opendata/: __init__.py  __mixin__.py  industry_cons.py  industry_indicator.py
dataset/tushare/: __init__.py  __mixin__.py  adj_factor.py  bak_basic.py  balancesheet.py  block_trade.py  cashflow.py  cb_basic.py  cb_call.py  cb_daily.py  cb_price_chg.py  cb_share.py  cyq_perf.py  daily.py  daily_basic.py  express.py  fina_indicator.py  forecast.py  fund_adj.py  fund_basic.py  fund_daily.py  fund_nav.py  fund_portfolio.py  fund_share.py  ggt_daily.py  hk_daily.py  hk_hold.py  income.py  index_classify.py  index_daily.py  index_dailybasic.py  limit_list.py  margin_detail.py  moneyflow.py  repurchase.py  share_float.py  stk_holdernumber.py  stk_holdertrade.py  stock_basic.py  stock_mx.py  (+5 more)
engine/: __init__.py  backup.py  clean.py  daily.py  dataset.py  register.py
feature/: __merge__.py  fina_indicator.py  hk_hold.py  index.py  logp.py  momentum.py  size.py  turnover.py  volatility.py
tool/: __init__.py  io.py  process.py  subset.py  visual.py
visual/: asset.py  hk_hold.py  holdernumber.py  income.py  index.py  industry.py  margin_detail.py
visual/compo/: stock_select.py
