[tool.poetry]
name = "system"
version = "0.1.0"
description = ""
authors = ["lumotian <lumotian@baidu.com>"]

[tool.poetry.dependencies]
python = "^3.8"

# 存储
pandas = "1.2.5"
pangres = "^2.3"
psycopg2 = "^2.8.6"
SQLAlchemy = "^1.4.11"
fastparquet = "^0.6.3"
pyarrow = "^4.0.1"
toml = "^0.10.2"

# 计算
statsmodels = "^0.12.2"
scikit-learn = "^0.24.2"
cvxpy = "^1.1.13"
alphalens = "^0.4.0"

# 获取
pandas-market-calendars = "^1.6.1"
pandas-datareader = "^0.9.0"
tushare = "^1.2.62"
OpenDataTools = "^1.0.0"
shreport = "^0.1.3"

# 展示
jupyter = "^1.0.0"
jupyterthemes = "^0.20.0"
papermill = "^2.3.3"
streamlit = "^0.89.0"
watchdog = "^2.1.6"

# 绘图
pandas-bokeh = "^0.5.5"
plydata = "^0.4.3"
plotnine = "^0.8.0"
lets-plot = "^2.1.0"
akshare = "^1.3.33"
futu-api = "^5.12.2408"
notion-client = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
