[tool.poetry]
name = "system"
version = "0.1.0"
description = ""
authors = ["Morty Lu"]

[tool.poetry.dependencies]
python = "~3.8"

# 存储
pandas = "^1.5.2"
numpy = "^1.24.1"
pangres = "^4.1.2"
psycopg2 = "^2.9.5"
SQLAlchemy = "^1.4.46"
fastparquet = "^2022.12.0"
pyarrow = "^10.0.1"
toml = "^0.10.2"

# 计算
statsmodels = "^0.13.5"
scikit-learn = "^1.2.0"
# cvxpy = "^1.1.13"
# alphalens = "^0.4.0"

# 获取
tushare = "^1.2.89"
akshare = "^1.8.59"
opendatatools = "^1.0.0"
shreport = "^0.1.3"
# pandas-market-calendars = "^1.6.1"
# pandas-datareader = "^0.9.0"

# 展示
jupyter = "^1.0.0"
jupyterthemes = "^0.20.0"
papermill = "^2.4.0"
streamlit = "^1.17.0"
# watchdog = "^2.1.6"

# 绘图
plydata = "^0.4.3"
pandas-bokeh = "^0.5.5"
plotnine = "^0.10.1"
# lets-plot = "^2.1.0"
# futu-api = "^5.12.2408"
# notion-client = "^0.9.0"

setuptools = "~57.5.0"
demjson = "2.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
